syntax = "proto3";

package job_recruiter;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "./pkg/pb/job/recruiter";

// Service definition for Job service
service RecruiterJob {
    rpc PostJob(JobOpeningRequest) returns (JobOpeningResponse) {};
    rpc GetAllJobs(GetAllJobsRequest) returns (GetAllJobsResponse) {};
    rpc GetOneJob(GetAJobRequest) returns (JobOpeningResponse) {};
    rpc DeleteAJob(DeleteAJobRequest) returns (google.protobuf.Empty);
    rpc UpdateAJob(UpdateAJobRequest) returns (UpdateAJobResponse) {};
    rpc GetJobAppliedCandidates(GetAppliedJobsRequest) returns (GetAppliedJobsResponse) {};
    rpc ScheduleInterview (ScheduleInterviewRequest) returns (ScheduleInterviewResponse);
}

message ScheduleInterviewRequest {
    int64 applicationId =1;
    int64 recruiterId =2;
    google.protobuf.Timestamp date_and_time =3;
    string mode =4;
    string link = 5;
}

message ScheduleInterviewResponse {
    int64 id = 1;
    int64 job_id = 2;
    int64 jobseeker_id = 3;
    int64 recruiter_id = 4;
    google.protobuf.Timestamp date_and_time = 5;
    string mode = 6;
    string link = 7;
    string status = 8;
}

message GetAppliedJobsRequest {
    int64 user_id =1;
}
message GetAppliedJobsResponse {
repeated AppliedJobs jobs =1;
}

message AppliedJobs {
    int64 id = 1;
    int64 jobId =2;
    int64 userId =3;
    int64 recruiterId =4;
    string coverLetter =5;
    string resumeUrl =6;
    string status =7;
}


// Request message for posting a job opening
message JobOpeningRequest {
    string title = 1;
    string description = 2;
    string requirements = 3;
    int32 employer_id = 4;
    string location = 5;
    string employment_type = 6;
    string salary = 7;
    string skills_required = 8;
    string experience_level = 9;
    string education_level = 10;
    google.protobuf.Timestamp application_deadline = 11;
}

// Response message for posting a job opening
message JobOpeningResponse {
    uint64 id = 1;
    string title = 2;
    string description = 3;
    string requirements = 4;
    google.protobuf.Timestamp posted_on = 5;
    int32 employer_id = 6;
    string location = 7;
    string employment_type = 8;
    string salary = 9;
    string skills_required = 10;
    string experience_level = 11;
    string education_level = 12;
    google.protobuf.Timestamp application_deadline = 13;
}

message GetAllJobsRequest {
    int32 employerIDInt = 1;
}

message GetAllJobsResponse {
    repeated JobOpeningResponse jobs = 1;
}

message GetAJobRequest {
    int32 employerIDInt = 1;
    int32 jobId = 2;
}

message DeleteAJobRequest {
    int32 employerIDInt = 1;
    int32 jobId = 2;
}

message UpdateAJobRequest {
    int32 employerIDInt = 1;
    int32 jobId = 2;
    string title = 3;
    string description = 4;
    string requirements = 5;
    int32 employer_id = 6;
    string location = 7;
    string employment_type = 8;
    string salary = 9;
    string skills_required = 10;
    string experience_level = 11;
    string education_level = 12;
    google.protobuf.Timestamp application_deadline = 13;
}

message UpdateAJobResponse {
    uint64 id = 1;
    string title = 2;
    string description = 3;
    string requirements = 4;
    google.protobuf.Timestamp posted_on = 5;
    int32 employer_id = 6;
    string location = 7;
    string employment_type = 8;
    string salary = 9;
    string skills_required = 10;
    string experience_level = 11;
    string education_level = 12;
    google.protobuf.Timestamp application_deadline = 13;
}
